--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,35 +1,20 @@
 {
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "commonjs",
+    "lib": ["ES2020"],
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
+}
 
-    "compilerOptions": {
-  
-      "target": "ES2020",
-  
-      "module": "commonjs",
-  
-      "lib": ["ES2020"],
-  
-      "outDir": "./dist",
-  
-      "rootDir": "./src",
-  
-      "strict": true,
-  
-      "esModuleInterop": true,
-  
-      "skipLibCheck": true,
-  
-      "forceConsistentCasingInFileNames": true,
-  
-      "experimentalDecorators": true,
-  
-      "emitDecoratorMetadata": true,
-  
-      "resolveJsonModule": true
-  
-    },
-  
-    "include": ["src//*"],
-  
-    "exclude": ["node_modules"]
-  
-  }
