--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,129 +1,72 @@
 version: '3.8'
 
 services:
-
   # PostgreSQL baza podataka
-
   postgres:
-
     image: postgres:15-alpine
-
     container_name: chat_db
-
     environment:
-
       POSTGRES_USER: postgres
-
       POSTGRES_PASSWORD: postgres
-
       POSTGRES_DB: chat_db
-
     ports:
-
       - "5432:5432"
-
     volumes:
-
       - postgres_data:/var/lib/postgresql/data
-
     networks:
-
       - chat_network
-
- 
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d chat_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   # Backend servis
-
   backend:
-
     build:
-
       context: ./backend
-
       dockerfile: Dockerfile
-
     container_name: chat_backend
-
     environment:
-
       NODE_ENV: production
-
       PORT: 5000
-
       DB_HOST: postgres
-
       DB_PORT: 5432
-
       DB_USERNAME: postgres
-
       DB_PASSWORD: postgres
-
       DB_NAME: chat_db
-
       JWT_SECRET: your-super-secret-jwt-key-change-this-in-production
-
       JWT_EXPIRES_IN: 7d
-
       FRONTEND_URL: http://localhost:3000
-
     ports:
-
       - "5000:5000"
-
     depends_on:
-
-      - postgres
-
+      postgres:
+        condition: service_healthy
     networks:
-
       - chat_network
-
-    command: sh -c "npm run migration:run && npm start"
-
- 
+    # UKLONJENO: Izbrisana problematična komanda za migracije koja je gasila kontejner
+    # Docker će sada koristiti "CMD" iz tvog Dockerfile-a (npm start)
 
   # Frontend servis
-
   frontend:
-
     build:
-
       context: ./frontend
-
       dockerfile: Dockerfile
-
     container_name: chat_frontend
-
     environment:
-
       NEXT_PUBLIC_API_URL: http://localhost:5000/api
-
       NEXT_PUBLIC_WS_URL: http://localhost:5000
-
     ports:
-
       - "3000:3000"
-
     depends_on:
-
       - backend
-
     networks:
-
       - chat_network
 
- 
-
 volumes:
-
   postgres_data:
 
- 
-
 networks:
-
   chat_network:
-
     driver: bridge
-
- 
