--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,68 @@
 {
-  "name": "frontend",
+
+  "name": "chat-frontend",
+
   "version": "0.1.0",
+
   "private": true,
+
   "scripts": {
+
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "start": "next start -p 3000",
+    "lint": "next lint"
+
   },
+
   "dependencies": {
-    "@headlessui/react": "^2.2.9",
-    "@heroicons/react": "^2.2.0",
-    "axios": "^1.13.2",
-    "date-fns": "^4.1.0",
-    "next": "16.1.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "react-hot-toast": "^2.6.0",
-    "socket.io-client": "^4.8.3"
+
+    "next": "14.1.0",
+
+    "react": "^18.2.0",
+
+    "react-dom": "^18.2.0",
+
+    "axios": "^1.6.7",
+
+    "socket.io-client": "^4.6.1",
+
+    "react-hook-form": "^7.50.1",
+
+    "zod": "^3.22.4",
+
+    "@hookform/resolvers": "^3.3.4",
+
+    "date-fns": "^3.3.1",
+
+    "clsx": "^2.1.0",
+
+    "lucide-react": "^0.323.0",
+
+    "react-hot-toast": "^2.4.1"
+
   },
+
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.27",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+
+    "typescript": "^5",
+
+    "@types/node": "^20",
+
+    "@types/react": "^18",
+
+    "@types/react-dom": "^18",
+
+    "autoprefixer": "^10.0.1",
+
+    "postcss": "^8",
+
+    "tailwindcss": "^3.3.0",
+
+    "eslint": "^8",
+
+    "eslint-config-next": "14.1.0"
+
   }
+
 }
