--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,26 @@
   "scripts": {
 
     "dev": "next dev",
+
     "build": "next build",
+
     "start": "next start -p 3000",
+
     "lint": "next lint"
 
   },
 
   "dependencies": {
+
+    "@hookform/resolvers": "^3.3.4",
+
+    "axios": "^1.6.7",
+
+    "clsx": "^2.1.0",
+
+    "date-fns": "^3.3.1",
+
+    "lucide-react": "^0.323.0",
 
     "next": "14.1.0",
 
@@ -23,29 +36,17 @@
 
     "react-dom": "^18.2.0",
 
-    "axios": "^1.6.7",
+    "react-hook-form": "^7.50.1",
+
+    "react-hot-toast": "^2.4.1",
 
     "socket.io-client": "^4.6.1",
 
-    "react-hook-form": "^7.50.1",
-
-    "zod": "^3.22.4",
-
-    "@hookform/resolvers": "^3.3.4",
-
-    "date-fns": "^3.3.1",
-
-    "clsx": "^2.1.0",
-
-    "lucide-react": "^0.323.0",
-
-    "react-hot-toast": "^2.4.1"
+    "zod": "^3.22.4"
 
   },
 
   "devDependencies": {
-
-    "typescript": "^5",
 
     "@types/node": "^20",
 
@@ -53,16 +54,19 @@
 
     "@types/react-dom": "^18",
 
-    "autoprefixer": "^10.0.1",
-
-    "postcss": "^8",
-
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.23",
 
     "eslint": "^8",
 
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+
+    "postcss": "^8.5.6",
+
+    "tailwindcss": "^3.4.1",
+
+    "typescript": "^5"
 
   }
 
 }
+
