--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
-  
-      "build": "tsc",
-  
-      "start": "node dist/server.js",
-  
-      "migration:generate": "typeorm-ts-node-commonjs migration:generate",
-  
-      "migration:run": "typeorm-ts-node-commonjs migration:run"
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate",
+    "migration:run": "typeorm-ts-node-commonjs migration:run"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +16,7 @@
   "type": "commonjs",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -33,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
@@ -42,5 +40,4 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
-  
 }
