--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
 
     "emoji-picker-react": "^4.16.1",
 
+    "js-cookie": "^3.0.5",
+
     "lucide-react": "^0.323.0",
 
     "next": "14.1.0",
@@ -49,6 +51,8 @@
   },
 
   "devDependencies": {
+
+    "@types/js-cookie": "^3.0.6",
 
     "@types/node": "^20",
 
