--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@hookform/resolvers": "^5.2.2",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "cookie": "^1.1.1",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.16.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "react": "^19.2.3",
