--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,10 @@
 
   "dependencies": {
 
+    "@giphy/js-fetch-api": "^5.7.0",
+
+    "@giphy/react-components": "^10.1.1",
+
     "@hookform/resolvers": "^3.3.4",
 
     "axios": "^1.6.7",
