--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-# Koristi verziju 20 koja odgovara tvom kodu
+# Koristi verziju 20 
 FROM node:20-alpine
 
 WORKDIR /app
@@ -6,7 +6,7 @@ WORKDIR /app
 # Kopiranje package fajlova
 COPY package*.json ./
 
-# Instalacija svih dependencies (uključujući TS kompajler)
+# Instalacija svih dependencies 
 RUN npm ci
 
 # Kopiranje ostatka aplikacije
@@ -15,8 +15,6 @@ COPY . .
 # Build TypeScript koda
 RUN npm run build
 
-# Ovdje možeš dodati komandu da obrišeš devDependencies ako želiš uštedu prostora, 
-# ali za sada je bitno da proradi.
 
 # Eksponiranje porta
 EXPOSE 5000
