--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,51 +2,88 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, develop, feature/deploy-test]
   pull_request:
     branches: [main]
 
 jobs:
-  backend:
+  # 1. Backend Provera (Testovi i Build)
+  backend-check:
+    name: Backend Check
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
+
       - name: Install dependencies
         working-directory: ./backend
         run: npm ci
+
       - name: Build TypeScript
         working-directory: ./backend
         run: npm run build
 
-  frontend:
+  # 2. Frontend Provera (Linter i Build)
+  frontend-check:
+    name: Frontend Check
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
       - name: Install dependencies
         working-directory: ./frontend
         run: npm ci
+
       - name: Build Next.js
         working-directory: ./frontend
         run: npm run build
         env:
           NEXT_PUBLIC_API_URL: ${{ secrets.API_URL }}
-          NEXT_PUBLIC_WS_URL: ${{ secrets.WS_URL }}
 
-  docker:
+  # 3. Docker Build & Push (Ovim ispunjavaš zahtev za Dockerizaciju na Cloudu)
+  build-docker:
+    name: Build Docker Images
     runs-on: ubuntu-latest
-    needs: [backend, frontend]
-    if: github.ref == 'refs/heads/main'
+    needs: [backend-check, frontend-check]
+    # Puštamo build samo na push (ne na PR) da ne trošimo resurse
+    if: github.event_name == 'push'
     steps:
-      - uses: actions/checkout@v3
-      - name: Build Docker images
-        run: docker compose build
-      - name: Run containers
-        run: docker compose up -d
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Backend
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/chat-backend:latest
+
+      - name: Build and push Frontend
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/chat-frontend:latest
+
+ 
