--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,60 +7,53 @@ on:
     branches: [main]
 
 jobs:
-  # 1. Backend Provera (Testovi i Build)
+  # 1. Backend Provera
   backend-check:
     name: Backend Check
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: backend/package-lock.json
-
       - name: Install dependencies
         working-directory: ./backend
         run: npm ci
-
       - name: Build TypeScript
         working-directory: ./backend
         run: npm run build
 
-  # 2. Frontend Provera (Linter i Build)
+  # 2. Frontend Provera
   frontend-check:
     name: Frontend Check
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
-
       - name: Install dependencies
         working-directory: ./frontend
         run: npm ci
-
       - name: Build Next.js
         working-directory: ./frontend
         run: npm run build
         env:
-          NEXT_PUBLIC_API_URL: ${{ secrets.API_URL }}
+          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
 
-  # 3. Docker Build & Push (Ovim ispunjavaš zahtev za Dockerizaciju na Cloudu)
+  # 3. Docker Build & Push
   build-docker:
     name: Build Docker Images
     runs-on: ubuntu-latest
     needs: [backend-check, frontend-check]
-    # Puštamo build samo na push (ne na PR) da ne trošimo resurse
     if: github.event_name == 'push'
     steps:
       - name: Checkout code
@@ -84,6 +77,22 @@ jobs:
         with:
           context: ./frontend
           push: true
+          # Ovo "ubacuje" URL backenda u samu Docker sliku tokom build-a
+          build-args: |
+            NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}
           tags: anadobrijevic/chat-frontend:latest
+
+  # 4. FINALNI KORAK: Deploy na Render
+  deploy:
+    name: Deploy to Render
+    runs-on: ubuntu-latest
+    needs: build-docker
+    if: github.event_name == 'push'
+    steps:
+      - name: Deploy Backend
+        run: curl -X POST ${{ secrets.RENDER_BACKEND_HOOK }}
+
+      - name: Deploy Frontend
+        run: curl -X POST ${{ secrets.RENDER_FRONTEND_HOOK }}
 
  
